--- a/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
+++ b/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
@@ -28,11 +28,33 @@
 [pkl]
 
 [layout]
+; Which of the keys, on the right of the US letters, do I use the most?
+; In rough tiers of importance:
+; åÅäÄöÖ
+; . , ?
+; " : - [] _ ' ; / {}
+; = +
+; < >
+
+; The ,./<> keys seem like prime real estate that is underutilized then.
+; They could have , ; < / . : >.
+; 90 () [] {}
+; ]} => '"
+
 ; SC = VKEY    	CStat	Base	Shift	Ctrl	AltGr	AGrSh	;	SwiSh	SwShS	SwAGr	SwAGS
-; Accessible ÅÄÖ
-;QW_LB = vc_LB 	1   	å   	Å   	--  	[   	{
-QW_LB = vc_LB 	4   	[   	{   	--  	å   	Å
-;QW_P  = vc_SC  	1   	ö   	Ö   	--  	;   	:
-QW_P  = vc_SC  	4   	;   	:   	--  	ö   	Ö
-;QW_QU = vc_QU   1   	ä   	Ä   	--  	'       "
-QW_QU = vc_QU   4   	'   	"   	--  	ä       Ä
+; Parentheses and brackets together. Testing out, maybe it is too annoying with AGrSh for {}
+QW_9  = 9       0   	##  	(   	--  	[   	{
+QW_0  = 0       0   	##  	)   	--  	]	    }
+
+QW_LB = vc_LB 	1   	å   	Å   	--  	[   	{
+;QW_LB = vc_LB 	4   	[   	{   	--  	å   	Å
+QW_RB = vc_RB   4   	'   	"   	--  	æ   	Æ
+
+QW_P  = vc_SC  	1   	ö   	Ö   	--  	;   	:
+;QW_P  = vc_SC  4   	;   	:   	--  	ö   	Ö
+QW_QU = vc_QU   1   	ä   	Ä   	--  	'       "
+;QW_QU = vc_QU   4   	'   	"   	--  	ä       Ä
+
+QW_LG = vc_LG   4   	\   	|   	--  	ø   	Ø   	; SC056: US <> - eD ## (ISO OEM_102)
+QW_CM = vc_CM   0   	,   	;   	--  	<   	≤   	; SC033: US ,< - dk_Cedilla (ANS/ISO OEM_COMMA)
+QW_PD = vc_PD   0   	.   	:     	--  	>	    ≥   	; SC034: US .> - dk_DotAbove (ANS/ISO OEM_PERIOD)
