--- a/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
+++ b/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
@@ -55,6 +55,7 @@ QW_P  = vc_SC  	1   	ö   	Ö   	--  	;   	:
 QW_QU = vc_QU   1   	ä   	Ä   	--  	'       "
 ;QW_QU = vc_QU   4   	'   	"   	--  	ä       Ä
 
+QW_V  = V       0       ##      ##      ##      ##      ##      ; Maybe this helps Ctrl+Shift+V work better?
 QW_LG = vc_LG   4   	\   	|   	--  	ø   	Ø   	; SC056: US <> - eD ## (ISO OEM_102)
 QW_CM = vc_CM   0   	,   	;   	--  	<   	≤   	; SC033: US ,< - dk_Cedilla (ANS/ISO OEM_COMMA)
 QW_PD = vc_PD   0   	.   	:     	--  	>	    ≥   	; SC034: US .> - dk_DotAbove (ANS/ISO OEM_PERIOD)
