--- a/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
+++ b/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
@@ -24,15 +24,15 @@
 ;layoutCode      = Cmk-eD-CAWS-ISO  								; Shortname for systems; not really in use?
 ;localeID        = 00000409 										; The Windows LocID (0409 is USA)
 
-
 [pkl]
 
 [layout]
 ; Which of the keys, on the right of the US letters, do I use the most?
 ; In rough tiers of importance:
 ; åÅäÄöÖ
-; . , ?
-; " : - [] _ ' ; / {}
+; . , ? "
+; : - () /
+; [] _ ' ; {}
 ; = +
 ; < >
 
@@ -42,20 +42,24 @@
 ; ]} => '"
 
 ; SC = VKEY    	CStat	Base	Shift	Ctrl	AltGr	AGrSh	;	SwiSh	SwShS	SwAGr	SwAGS
+QW_1  = 1       0   	##  	!   	--  	❗      ‼️     ; SC002: US 1! - dk_DotBelow
 ; Parentheses and brackets together. Testing out, maybe it is too annoying with AGrSh for {}
+QW_8  = 8       0   	##  	*   	--  	⭐      🤩      ; SC009: US 8* - dk_Ogonek/CommaBelow
 QW_9  = 9       0   	##  	(   	--  	[   	{
 QW_0  = 0       0   	##  	)   	--  	]	    }
+QW_MN = vc_MN   0   	-   	_   	--  	–       —        ; SC00c: US -_ - dk_Macron (ANS/ISO _MINUS/_PLUS)
 
+QW_L  = I       1   	i   	I   	--  	↑       ⬆️   	; SC026: QW lL
 QW_LB = vc_LB 	1   	å   	Å   	--  	[   	{
-;QW_LB = vc_LB 	4   	[   	{   	--  	å   	Å
 QW_RB = vc_RB   4   	'   	"   	--  	æ   	Æ
 
+QW_Y  = J       1   	j   	J   	--  	←   	⬅️   	; SC015: QW yY
+QW_N  = K       1   	k   	K   	--  	↓   	⬇️   	; SC031: QW nN
+QW_U  = L       1   	l   	L   	--  	→   	➡️   	; SC016: QW uU
 QW_P  = vc_SC  	1   	ö   	Ö   	--  	;   	:
-;QW_P  = vc_SC  4   	;   	:   	--  	ö   	Ö
 QW_QU = vc_QU   1   	ä   	Ä   	--  	'       "
-;QW_QU = vc_QU   4   	'   	"   	--  	ä       Ä
 
 QW_V  = V       0       ##      ##      ##      ##      ##      ; Maybe this helps Ctrl+Shift+V work better?
-QW_LG = vc_LG   4   	\   	|   	--  	ø   	Ø   	; SC056: US <> - eD ## (ISO OEM_102)
 QW_CM = vc_CM   0   	,   	;   	--  	<   	≤   	; SC033: US ,< - dk_Cedilla (ANS/ISO OEM_COMMA)
 QW_PD = vc_PD   0   	.   	:     	--  	>	    ≥   	; SC034: US .> - dk_DotAbove (ANS/ISO OEM_PERIOD)
+QW_SL = vc_SL   0   	/   	?   	--  	❓      ⁉️      ; SC035: US /? - dk_Stroke/Bar (ANS/ISO _2/_MINUS)
