--- a/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
+++ b/Layouts/QWERTY/QWE-eD_ISO/Layout_Override.ini
@@ -49,17 +49,19 @@ QW_9  = 9       0   	##  	(   	--  	[   	{
 QW_0  = 0       0   	##  	)   	--  	]	    }
 QW_MN = vc_MN   0   	-   	_   	--  	–       —        ; SC00c: US -_ - dk_Macron (ANS/ISO _MINUS/_PLUS)
 
+QW_I  = U       1   	u   	U   	--  	👍     ☝️   	; SC017: QW iI
 QW_L  = I       1   	i   	I   	--  	↑       ⬆️   	; SC026: QW lL
 QW_LB = vc_LB 	1   	å   	Å   	--  	[   	{
 QW_RB = vc_RB   4   	'   	"   	--  	æ   	Æ
 
+QW_G  = D       5   	d   	D   	--  	👎   	👇   	; SC022: QW gG
 QW_Y  = J       1   	j   	J   	--  	←   	⬅️   	; SC015: QW yY
 QW_N  = K       1   	k   	K   	--  	↓   	⬇️   	; SC031: QW nN
 QW_U  = L       1   	l   	L   	--  	→   	➡️   	; SC016: QW uU
 QW_P  = vc_SC  	1   	ö   	Ö   	--  	;   	:
 QW_QU = vc_QU   1   	ä   	Ä   	--  	'       "
 
-QW_V  = V       0       ##      ##      ##      ##      ##      ; Maybe this helps Ctrl+Shift+V work better?
+QW_V  = V       0       ##      ##      ##      ✔️      ✅      ; Maybe this helps Ctrl+Shift+V work better?
 QW_CM = vc_CM   0   	,   	;   	--  	<   	≤   	; SC033: US ,< - dk_Cedilla (ANS/ISO OEM_COMMA)
 QW_PD = vc_PD   0   	.   	:     	--  	>	    ≥   	; SC034: US .> - dk_DotAbove (ANS/ISO OEM_PERIOD)
 QW_SL = vc_SL   0   	/   	?   	--  	❓      ⁉️      ; SC035: US /? - dk_Stroke/Bar (ANS/ISO _2/_MINUS)
