--- a/EPKL_Layouts_Override.ini
+++ b/EPKL_Layouts_Override.ini
@@ -95,6 +95,7 @@ cat     = 🐈
 clap    = 👏
 heart   = ❤️
 ok      = 🆗
+shrug   = 🤷
 :)      = 🙂
 :P      = 😛
 :D      = 😄
@@ -110,3 +111,4 @@ ok      = 🆗
 >:(     = 😡
 :3      = 😺
 :/      = 😕
+:S      = 😵‍💫
